tests/ui/macros/vis-repetition-matches-empty.stderr
error: repetition matches empty token tree
  --> $DIR/vis-repetition-matches-empty.rs:5:7
   |
LL |     ($($p:vis)*) => {}
   |       ^^^^^^^^

error: aborting due to 1 previous error

